[package]
name = "sophia_implant"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
libc = "0.2"
dirs = "5.0"
hex = "0.4"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
memmap2 = "0.7"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "http3"] }
obfstr = "0.4"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
